# stm32f070rc-ili9341

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  README.md  lvgl Debug.launch  lvgl.ioc
Core/Inc/: ili9341.h
Core/Src/: main.c  stm32f0xx_hal_msp.c
Debug/: lvgl.elf  lvgl.list  lvgl.map  makefile  objects.list
Debug/Core/Src/: ili9341.cyclo  ili9341.d  ili9341.su  ili9341_touch.cyclo  ili9341_touch.d  ili9341_touch.su  main.cyclo  main.d  main.su  stm32f0xx_hal_msp.cyclo  stm32f0xx_hal_msp.d  stm32f0xx_hal_msp.su  stm32f0xx_it.cyclo  stm32f0xx_it.d  stm32f0xx_it.su  subdir.mk  system_stm32f0xx.d
Debug/Drivers/STM32F0xx_HAL_Driver/Src/: stm32f0xx_hal.d  stm32f0xx_hal_cortex.d  stm32f0xx_hal_dma.d  stm32f0xx_hal_exti.d  stm32f0xx_hal_flash.d  stm32f0xx_hal_flash_ex.d  stm32f0xx_hal_gpio.d  stm32f0xx_hal_i2c.d  stm32f0xx_hal_i2c_ex.d  stm32f0xx_hal_pwr.d  stm32f0xx_hal_pwr_ex.d  stm32f0xx_hal_rcc.d  stm32f0xx_hal_rcc_ex.d  stm32f0xx_hal_spi.d  stm32f0xx_hal_spi_ex.d  stm32f0xx_hal_tim.d  stm32f0xx_hal_tim_ex.d  stm32f0xx_hal_uart.d  stm32f0xx_hal_uart_ex.d  subdir.mk
include/: main.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h
src/: ili9341.c  ili9341_touch.c  main.c  stm32f0xx_it.c
stm32/STM32F0xx_HAL_Driver/Inc/: stm32f0xx_hal.h
